Adding and endpoint with validation

--- a/perprom/src/main/resources/application.properties
+++ b/perprom/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:1515/ppmtools
+spring.datasource.username=postgres
+spring.datasource.password=d1$tR!CT19
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
